<resources>
    <string name="app_name">OrganizEat</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="image_of_the_recipe">Image of the recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="category">Category</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="new_recipe_title">Title</string>
    <string name="recipe_description">Description</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="image_added">Image Added</string>
    <string name="time_for_cooking">Cooking Time</string>
    <string name="recipe_ingredient">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="more">More</string>
    <string name="yield">Yield</string>
    <string name="add_chart">Add to Shopping List</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="recipe_delete">Recipe deleted</string>
    <string name="settings">Settings</string>
    <string name="list">Shopping List</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="filter">Filter</string>

    <string-array name="Categorie">
        <item>Antipasti</item>
        <item>Primi</item>
        <item>Secondi</item>
        <item>Dolci</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="new_recipe">New Recipe</string>
    <string name="username">Name</string>
    <string name="profile">Profile</string>
    <string name="name">Name Surname</string>
    <string name="goals">Your Goals</string>
    <string name="menage_category">Menage categories</string>
    <string name="new_product">New product</string>
    <string name="edit_category">Category updated!</string>
    <string name="cancel">Cancel</string>
    <string name="category_deleted">Category deleted!</string>
    <string name="add">Add</string>
    <string name="add_category">Add category</string>
    <string name="default_category">Main dish</string>
    <string name="filter_title">Filter by category</string>
    <string name="added_to_list">Ingredients added to list</string>
    <string name="added_recipe">New recipe added!</string>
    <string name="edited_recipe">Recipe edited!</string>
    <string name="category_used">The category is used! Impossible to delete!</string>
    <string name="update_category">Update category</string>
    <string name="take_picture">Take a picture</string>
    <string name="select_picture">Select a picture</string>
    <string name="close">Close</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an Account?</string>
    <string name="logout">Logout</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_pw">Please Enter Password</string>
    <string name="enter_correct_email">Please Enter Valid Email</string>
    <string name="enter_correct_pw">Please Enter Valid Password</string>
    <string name="enter_name">Please Enter Username</string>
    <string name="confirm_pw">Please Confirm Password</string>
    <string name="email_already_present">Email already present</string>
    <string name="pw_equals">Confirm-Passord must be the same</string>
    <string name="cooking_time">Cooking time</string>
    <string name="recipe">Recipes:</string>
    <string name="categories">Categories:</string>
    <string name="biometric_authentication">Biometric authentication</string>
    <string name="fingerprint_error">Fingerprint not recognised</string>

</resources>