<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_back"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/back"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_add_chart"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/add_chart"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"
        app:showAsAction="always" />


    <item
        android:id="@+id/app_bar_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>
