<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/app_bar_filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_close"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/close"
        app:showAsAction="always" />
</menu>