<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.organizeat.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home" />

    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="com.example.organizeat.HomeFragment"
        android:label="@string/list"
        tools:layout="@layout/home" />

    <fragment
        android:id="@+id/nav_add_category"
        android:name="com.example.organizeat.AddFragment"
        android:label="@string/list"
        tools:layout="@layout/add_recipe" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.organizeat.AddFragment"
        android:label="@string/settings"
        tools:layout="@layout/add_recipe" />

</navigation>