<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/single_card"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:strokeWidth="1dp"
    app:strokeColor="@color/material_on_surface_stroke">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recipeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/recipe_title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/category"
            android:textAppearance="?attr/textAppearanceBody2" />

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:background="@color/bluemarine"
            android:contentDescription="@string/image_of_the_recipe"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:src="@drawable/ic_launcher_foreground"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>